--- a/src/application/LoginDesign.fxml
+++ b/src/application/LoginDesign.fxml
@@ -23,7 +23,7 @@
       </Pane>
       <Line endX="100.0" layoutX="375.0" layoutY="183.0" rotate="90.0" startX="-150.0" stroke="#465058" strokeWidth="2.0" />
       <TextField id="inputUsername" fx:id="inputUsername" layoutX="398.0" layoutY="72.0" prefHeight="41.0" prefWidth="248.0" promptText="Username" style="-fx-background-color: #FFFFFF; -fx-border-color: #ffffff;" stylesheets="@../../Lgoin.css" />
-      <PasswordField id="inputPassword" fx:id="inputPassword" layoutX="398.0" layoutY="142.0" prefHeight="41.0" prefWidth="248.0" promptText="Password" style="-fx-border-color: #ffffff; -fx-background-color: #ffffff;" stylesheets="@../../Lgoin.css" />
+      <PasswordField id="inputPassword" fx:id="inputPassword" layoutX="398.0" layoutY="142.0" onKeyReleased="#EnterToLogin" prefHeight="41.0" prefWidth="248.0" promptText="Password" style="-fx-border-color: #ffffff; -fx-background-color: #ffffff;" stylesheets="@../../Lgoin.css" />
       <JFXButton id="btnLogin" fx:id="btnLogin" layoutX="398.0" layoutY="229.0" onAction="#logIn" prefHeight="41.0" prefWidth="248.0" style="-fx-background-color: #6ED9A0;" stylesheets="@../../Lgoin.css" text="LOG IN" textFill="#fbfcfc">
          <font>
             <Font name="System Bold" size="15.0" />
